# 2020Lang

./: .gitignore  README.md  autopush.bat  autopush.sh
2020Lang_Rust/Advanced_Rust/: Cargo.toml
Algorithm Repository/: C++基础 STL map.cpp  C++基础 STL vector.cpp  C++基础 STL 自定义比较函数.cpp  C++基础 不定长度整数输入.cpp  C++基础 快速输入输出(关闭输入同步+字符读入).cpp  C++基础 结构体链表.cpp  C++安全 MD5.cpp  Rust基础 二分查找.rs  动态规划 最长上升子序列.cpp  图论 Fleury 欧拉通路.cpp  图论 KMP 字符串匹配.cpp  图论 Kruskal 最小生成树.cpp  图论 Prime+次小生成树.cpp  图论 SPFA[邻接矩阵].cpp  图论 匈牙利算法(二分图的最大匹配问题).cpp  字符串 Manacher算法 回文串.cpp  数学 BIGNUM乘法(FFT).cpp  数学 素数线性筛法.cpp  数学 约瑟夫问题.cpp  数据结构 Trie 01字典树 CF948D.cpp  数据结构 Trie 普通字典树 CF291C.cpp  数据结构 二分答案+线段树.cpp  数据结构 第k大数-LeetCode0703-小根堆.cpp  注释专用.cpp  网络编程 Poll(unp based).c
CPP-(Algorithm_Repository)/: C++基础 输入输出一行.cpp  数学 Lucas定理{求 c(n,m) mod p}.cpp  数据结构 RMQ 字符串区间Hash.cpp  数据结构 分块 区间前驱.cpp
Cpp/: C++基础 STL map.cpp  C++基础 STL vector.cpp  C++基础 STL 自定义比较函数.cpp  C++基础 solveSudoku.cpp  C++基础 不定长度整数输入.cpp  C++基础 归并排序求逆序对.cpp  C++基础 快速排序+二分查找+swap.cpp  C++基础 快速输入输出(关闭输入同步+字符读入).cpp  C++基础 文件输入输出.cpp  C++基础 结构体sort.cpp  C++基础 结构体链表.cpp  C++基础 解数独.cpp  C++基础 输入输出一行.cpp  C++基础 高精度乘法.cpp  C++安全 MD5.cpp  (+52 more)
Cpp-(Algorithm_Repository)/: C++基础 快速排序+二分查找+swap.cpp  C++基础 高精度乘法.cpp  图论 网络流 最大流 EK.cpp  多线程 atomic类.cpp  数学 FFT(快速傅立叶变换).cpp  莫队算法.cpp
Cpp-(Algorithm_vRepository)/: C++基础 文件输入输出.cpp  UDPPingerClient.py  动态规划 斜率优化.cpp  图论 AC自动机 多模匹配算法.cpp  图论 Manacher算法 最长回文串长度.cpp  图论 最短循环节 KMP.cpp  数学 逆元.cpp  网络编程 Epoll.c  计算几何 凸包扫描(最长点距).cpp
Rocket_Server/: Cargo.toml  README.md
Rocket_Server/src/: lib  main.rs  manage.rs
(+249 files in other folders)
