[package]
name = "rocket_server"
version = "0.1.0"
authors = ["Lagerst <pzw9908@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "*"
rocket = "0.4.3"
chrono = "0.4"
rand = "0.3.17"
rustc-serialize = "0.3.18"