[package]
name = "advanced_rust"
version = "0.1.0"
authors = ["Lagerst <pzw9908@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_average = {path = "get_average"}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3